--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,7 +3,7 @@
     <ListPreference android:title="@string/ListPreference_Label"
         android:entries="@array/ListPreference_labels"
         android:entryValues="@array/ListPreference_values"
-        android:defaultValue="@string/Favorite_Value"
+        android:defaultValue="@string/Popular_Value"
         android:key="@string/ListPreference_Key"/>
 
 </PreferenceScreen>
