--- a/app/src/main/res/layout/layout_poster.xml
+++ b/app/src/main/res/layout/layout_poster.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:id="@+id/poster_IV"
-    android:scaleType="centerCrop"
-    android:layout_gravity="center"
-    android:contentDescription="@string/poster_image">
-
-</ImageView>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
+    <ImageView
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:id="@+id/poster_IV"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:contentDescription="@string/poster_image"
+        android:adjustViewBounds="true"/>
+    <ImageView
+        android:layout_margin="8dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:id="@+id/favorite"
+        android:scaleType="fitXY"
+        android:layout_gravity="right"
+        android:contentDescription="@string/Favorite_Label"
+        android:src="@drawable/is_favorite"
+        android:tint="@color/colorAccent"
+        android:background="@color/colorPrimary"
+        />
+</FrameLayout>
